@@ -1,3 +1,6 @@
+31 Aug 2010 Comment out unimplemented hetmap support for "tapemap" alias
+            that produces incorrect output under Linux due to libtool
+            wrappers - Kevin Leonard
 29 Aug 2010 Virtual Architecture Level support - Jan Jaeger
 28 Aug 2010 Add "autoinit" command to control a sysblk variable noautoinit. 
             sysblk.noautoinit = FALSE, devinit will create a file when requested
